// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deltas & Hashes Deltas Both empty: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableCellDiff t1 r1 1`] = `
[
  {
    "t1": [
      {
        "r1": [
          {
            "c1": [
              1,
              "Hc2DO@000008DKS9",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableCellDiff t1 r2 1`] = `
[
  {
    "t1": [
      {
        "r1": [
          {
            "c1": [
              1,
              "Hc2DO@000008DKS9",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {
    "t1": {
      "r1": 3278308926,
    },
  },
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 608074644,
  },
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableCellDiff t1 r1 1`] = `
[
  {
    "t1": [
      {
        "r1": [
          {
            "c1": [
              1,
              "Hc2DO@000008DKS9",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableCellDiff t1 r2 1`] = `
[
  {
    "t1": [
      {
        "r1": [
          {
            "c1": [
              1,
              "Hc2DO@000008DKS9",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {
    "t1": {
      "r1": 3278308926,
    },
  },
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 608074644,
  },
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableRowDiff t1 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
              "c2": [
                2,
                "Hc2DO@000018DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 3977440014,
  },
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableTableDiff 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
              "c2": [
                2,
                "Hc2DO@000018DKS9",
              ],
            },
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableValueDiff 1`] = `
[
  {
    "v1": [
      1,
      "Hc2DO@000008DKS9",
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableValueDiff 1`] = `
[
  {
    "v1": [
      1,
      "Hc2DO@000008DKS9",
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {
    "t1": {
      "r1": 3278308926,
    },
  },
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 608074644,
  },
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 2956686744,
  },
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableTableDiff 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
              "c2": [
                2,
                "Hc2DO@000018DKS9",
              ],
            },
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000038DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableValueDiff 1`] = `
[
  {
    "v1": [
      1,
      "Hc2DO@000048DKS9",
    ],
    "v2": [
      2,
      "Hc2DO@000058DKS9",
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableCellDiff t1 r1 1`] = `
[
  {
    "t1": [
      {
        "r1": [
          {
            "c2": [
              2,
              "Hc2DO@000018DKS9",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableCellDiff t1 r2 1`] = `
[
  {
    "t1": [
      {
        "r1": [
          {
            "c2": [
              2,
              "Hc2DO@000018DKS9",
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {
    "t1": {
      "r1": 3086998632,
    },
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 2003790970,
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableRowDiff t1 1`] = `
[
  [
    {
      "t1": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {
    "t1": 2238392979,
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableTableDiff 1`] = `
[
  [
    {
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000038DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableTableDiff 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
              "c2": [
                2,
                "Hc2DO@000018DKS9",
              ],
            },
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000028DKS9",
              ],
            },
          ],
        },
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000038DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableValueDiff 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableValueDiff 1`] = `
[
  {
    "v2": [
      2,
      "Hc2DO@000018DKS9",
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableCellDiff t1 r1 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableCellDiff t1 r2 1`] = `
[
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableRowDiff t1 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableRowDiff t2 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableTableDiff 1`] = `
[
  [
    {},
  ],
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableValueDiff 1`] = `
[
  {
    "v1": [
      1,
      "Hc2DO@000008DKS9",
    ],
    "v2": [
      2,
      "Hc2DO@000018DKS9",
    ],
  },
]
`;

exports[`Deltas & Hashes getMergeableCellHashes Empty 1`] = `{}`;

exports[`Deltas & Hashes getMergeableCellHashes Non-empty 1`] = `
{
  "t1": {
    "r1": {
      "c1": 4065945599,
      "c2": 2669080357,
    },
  },
}
`;

exports[`Deltas & Hashes getMergeableContentHashes Empty 1`] = `
[
  0,
  0,
]
`;

exports[`Deltas & Hashes getMergeableContentHashes Non-empty 1`] = `
[
  2815319209,
  1841261522,
]
`;

exports[`Deltas & Hashes getMergeableRowHashes Empty 1`] = `{}`;

exports[`Deltas & Hashes getMergeableRowHashes Non-empty 1`] = `
{
  "t1": {
    "r1": 3277579774,
    "r2": 659695446,
  },
}
`;

exports[`Deltas & Hashes getMergeableTableHashes Empty 1`] = `{}`;

exports[`Deltas & Hashes getMergeableTableHashes Non-empty 1`] = `
{
  "t1": 2238392979,
  "t2": 3641929066,
}
`;

exports[`Deltas & Hashes getMergeableValuesHashes Empty 1`] = `{}`;

exports[`Deltas & Hashes getMergeableValuesHashes Non-empty 1`] = `
{
  "v1": 4065945599,
  "v2": 2669080357,
}
`;

exports[`Merge Nothing 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Nothing 2`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000048DKS9",
                1630348003,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            1329873962,
          ],
          "r2": [
            {
              "c1": [
                0,
                "Hc2DO@000028DKS9",
                2053295812,
              ],
            },
            "",
            2693917663,
          ],
        },
        "",
        2989037115,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000038DKS9",
                1190671601,
              ],
            },
            "",
            2044790046,
          ],
        },
        "",
        198245466,
      ],
    },
    "",
    2757715889,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delRow 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000048DKS9",
                1630348003,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            1329873962,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        926776032,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000038DKS9",
                1190671601,
              ],
            },
            "",
            2044790046,
          ],
        },
        "",
        198245466,
      ],
    },
    "",
    2370998078,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delTable 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000048DKS9",
                1630348003,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            1329873962,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        926776032,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
        },
        "",
        2407505441,
      ],
    },
    "",
    1159067993,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000098DKS9",
                1159821978,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            749504355,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        825009660,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@0000:8DKS9",
                4067122285,
              ],
            },
            "",
            185663275,
          ],
        },
        "",
        2804866459,
      ],
    },
    "",
    2496288687,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000098DKS9",
                1159821978,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            749504355,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        825009660,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@0000:8DKS9",
                4067122285,
              ],
            },
            "",
            185663275,
          ],
        },
        "",
        2804866459,
      ],
    },
    "",
    2496288687,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@0000=8DKS9",
        2186700342,
      ],
      "v2": [
        undefined,
        "Hc2DO@0000>8DKS9",
        3732834865,
      ],
    },
    "",
    3214690238,
  ],
]
`;

exports[`Merge One way delValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000098DKS9",
                1159821978,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            749504355,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        825009660,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@0000:8DKS9",
                4067122285,
              ],
            },
            "",
            185663275,
          ],
        },
        "",
        2804866459,
      ],
    },
    "",
    2496288687,
  ],
  [
    {
      "v1": [
        undefined,
        "Hc2DO@0000?8DKS9",
        4171001604,
      ],
      "v2": [
        undefined,
        "Hc2DO@0000>8DKS9",
        3732834865,
      ],
    },
    "",
    3097473817,
  ],
]
`;

exports[`Merge One way setCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000048DKS9",
                1630348003,
              ],
              "c2": [
                0,
                "Hc2DO@000018DKS9",
                1811946515,
              ],
            },
            "",
            1250862157,
          ],
          "r2": [
            {
              "c1": [
                0,
                "Hc2DO@000028DKS9",
                2053295812,
              ],
            },
            "",
            2693917663,
          ],
        },
        "",
        46617994,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000038DKS9",
                1190671601,
              ],
            },
            "",
            2044790046,
          ],
        },
        "",
        198245466,
      ],
    },
    "",
    3398661362,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way setCell 2 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000048DKS9",
                1630348003,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            1329873962,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        926776032,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000088DKS9",
                3266244960,
              ],
            },
            "",
            2353081134,
          ],
        },
        "",
        1052771694,
      ],
    },
    "",
    1868403663,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
              "c2": [
                0,
                "Hc2DO@000018DKS9",
                1811946515,
              ],
            },
            "",
            2772034540,
          ],
          "r2": [
            {
              "c1": [
                0,
                "Hc2DO@000028DKS9",
                2053295812,
              ],
            },
            "",
            2693917663,
          ],
        },
        "",
        631175839,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000038DKS9",
                1190671601,
              ],
            },
            "",
            2044790046,
          ],
        },
        "",
        198245466,
      ],
    },
    "",
    2042818875,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way setValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000098DKS9",
                1159821978,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            749504355,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        825009660,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@0000:8DKS9",
                4067122285,
              ],
            },
            "",
            185663275,
          ],
        },
        "",
        2804866459,
      ],
    },
    "",
    2496288687,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@0000=8DKS9",
        2186700342,
      ],
      "v2": [
        0,
        "Hc2DO@0000<8DKS9",
        2229192514,
      ],
    },
    "",
    918514914,
  ],
]
`;

exports[`Merge One way setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000098DKS9",
                1159821978,
              ],
              "c2": [
                undefined,
                "Hc2DO@000058DKS9",
                3070457446,
              ],
            },
            "",
            749504355,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000068DKS9",
                1646436633,
              ],
            },
            "",
            3306584420,
          ],
        },
        "",
        825009660,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            474074414,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Hc2DO@0000:8DKS9",
                4067122285,
              ],
            },
            "",
            185663275,
          ],
        },
        "",
        2804866459,
      ],
    },
    "",
    2496288687,
  ],
  [
    {
      "v1": [
        0,
        "Hc2DO@0000;8DKS9",
        3122944217,
      ],
      "v2": [
        0,
        "Hc2DO@0000<8DKS9",
        2229192514,
      ],
    },
    "",
    558920470,
  ],
]
`;

exports[`Merge Two way Causality 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@000025DK@@",
                3667222557,
              ],
            },
            "",
            953672745,
          ],
        },
        "",
        3602741010,
      ],
    },
    "",
    1834808984,
  ],
  [
    {
      "v1": [
        2,
        "Hc2DO@000035DK@@",
        2861658760,
      ],
    },
    "",
    1777490301,
  ],
]
`;

exports[`Merge Two way Causality 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000048DKS9",
                2480417845,
              ],
            },
            "",
            4137739263,
          ],
        },
        "",
        1563206141,
      ],
    },
    "",
    363199193,
  ],
  [
    {
      "v1": [
        3,
        "Hc2DO@000058DKS9",
        895933976,
      ],
    },
    "",
    2705602071,
  ],
]
`;

exports[`Merge Two way Conflict 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v0": [
        0,
        "Hc2DO@000018DKS9",
        1811946515,
      ],
      "v1": [
        1,
        "Hc2DO@000028DKS9",
        1065108477,
      ],
    },
    "",
    1606578288,
  ],
]
`;

exports[`Merge Two way Conflict 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@100005DK@@",
                2804922642,
              ],
            },
            "",
            58371857,
          ],
        },
        "",
        3714204384,
      ],
    },
    "",
    3444509272,
  ],
  [
    {
      "v1": [
        2,
        "Hc2DO@100015DK@@",
        2724740231,
      ],
    },
    "",
    3742178356,
  ],
]
`;

exports[`Merge Two way Conflict 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Hc2DO@100005DK@@",
                2804922642,
              ],
            },
            "",
            58371857,
          ],
        },
        "",
        3714204384,
      ],
    },
    "",
    3444509272,
  ],
  [
    {
      "v0": [
        0,
        "Hc2DO@000018DKS9",
        1811946515,
      ],
      "v1": [
        2,
        "Hc2DO@100015DK@@",
        2724740231,
      ],
    },
    "",
    4021524955,
  ],
]
`;

exports[`Merge Two way Interleaving 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@200008DKS9",
                570947733,
              ],
            },
            "",
            1656872049,
          ],
        },
        "",
        974221882,
      ],
    },
    "",
    2242120835,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Two way Interleaving 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Hc2DO@100005DK@@",
                2804922642,
              ],
            },
            "",
            3853242083,
          ],
        },
        "",
        2330221960,
      ],
    },
    "",
    810253148,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    445733406,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Hc2DO@100005DK@@",
                2804922642,
              ],
            },
            "",
            3853242083,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@100015DK@@",
                2724740231,
              ],
            },
            "",
            3317170052,
          ],
        },
        "",
        1954659064,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@100025DK@@",
                2257203448,
              ],
            },
            "",
            1788707245,
          ],
        },
        "",
        3326269632,
      ],
    },
    "",
    3054983190,
  ],
  [
    {
      "v2": [
        2,
        "Hc2DO@100035DK@@",
        74743437,
      ],
    },
    "",
    3825747659,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
              "c2": [
                2,
                "Hc2DO@100005DK@@",
                2804922642,
              ],
            },
            "",
            650954973,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@100015DK@@",
                2724740231,
              ],
            },
            "",
            3317170052,
          ],
        },
        "",
        2568473586,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@100025DK@@",
                2257203448,
              ],
            },
            "",
            1788707245,
          ],
        },
        "",
        3326269632,
      ],
    },
    "",
    2209959623,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
      "v2": [
        2,
        "Hc2DO@100035DK@@",
        74743437,
      ],
    },
    "",
    4271447253,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
            },
            "",
            115816801,
          ],
        },
        "",
        4293955837,
      ],
    },
    "",
    2577270131,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 2`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {
      "v1": [
        0,
        "Hc2DO@100005DK@@",
        3183766124,
      ],
    },
    "",
    3867775115,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
            },
            "",
            115816801,
          ],
        },
        "",
        4293955837,
      ],
    },
    "",
    2577270131,
  ],
  [
    {
      "v1": [
        0,
        "Hc2DO@100005DK@@",
        3183766124,
      ],
    },
    "",
    3867775115,
  ],
]
`;

exports[`Protocol basics 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            3278308926,
          ],
        },
        "",
        608074644,
      ],
    },
    "",
    3689956797,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Protocol basics 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Hc2DO@000005DK@@",
                2554361111,
              ],
            },
            "",
            478205993,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000015DK@@",
                167179554,
              ],
            },
            "",
            3088830063,
          ],
        },
        "",
        2691149289,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Hc2DO@000025DK@@",
                3667222557,
              ],
            },
            "",
            2373406559,
          ],
        },
        "",
        4292512243,
      ],
    },
    "",
    3498589694,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent apply into empty store 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "Hc2DO@000008DKS9",
            1279994494,
          ],
        },
        "Hc2DO@000008DKS9",
        1293085726,
      ],
    },
    "Hc2DO@000008DKS9",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "Hc2DO@000008DKS9",
    2304392760,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent apply over existing content 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c0": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "Hc2DO@000018DKS9",
            192970134,
          ],
        },
        "Hc2DO@000018DKS9",
        4186037739,
      ],
    },
    "Hc2DO@000018DKS9",
    3007071579,
  ],
  [
    {
      "v0": [
        0,
        "Hc2DO@000018DKS9",
        1811946515,
      ],
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "Hc2DO@000018DKS9",
    3220353420,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set default 1`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "",
                401433231,
              ],
            },
            "",
            2660078143,
          ],
        },
        "",
        2466603274,
      ],
    },
    "",
    471459239,
  ],
  [
    {
      "v0": [
        0,
        "",
        401433231,
      ],
    },
    "",
    30487211,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set into empty store 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set over existing content 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            1254797189,
          ],
        },
        "",
        423436526,
      ],
    },
    "",
    639574078,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    2404136035,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set over existing content 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
              "c2": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            1838713043,
          ],
        },
        "",
        4090308283,
      ],
    },
    "",
    4221094888,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    2404136035,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set with wrong hashes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                1,
              ],
            },
            "0",
            2,
          ],
        },
        "",
        3,
      ],
    },
    "",
    4,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        5,
      ],
    },
    "",
    6,
  ],
]
`;

exports[`getMergeableContent Empty transaction 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getMergeableContent Initialize 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getMergeableContent Mutate 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000068DKS9",
                3251374017,
              ],
              "c2": [
                undefined,
                "Hc2DO@000078DKS9",
                3791145484,
              ],
            },
            "",
            1806732327,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Hc2DO@000088DKS9",
                4197029487,
              ],
            },
            "",
            2923703903,
          ],
        },
        "",
        1720896634,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Hc2DO@000098DKS9",
                1159821978,
              ],
            },
            "",
            2327362953,
          ],
        },
        "",
        2284195162,
      ],
    },
    "",
    2891355473,
  ],
  [
    {
      "v1": [
        5,
        "Hc2DO@0000:8DKS9",
        3434436441,
      ],
      "v2": [
        undefined,
        "Hc2DO@0000;8DKS9",
        840500976,
      ],
    },
    "",
    3302417351,
  ],
]
`;

exports[`getMergeableContent Set in sequence 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
              "c2": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            1851134271,
          ],
          "r2": [
            {
              "c1": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            1951063224,
          ],
        },
        "",
        688021747,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000038DKS9",
                4033202406,
              ],
            },
            "",
            645465578,
          ],
        },
        "",
        2126674952,
      ],
    },
    "",
    3758433300,
  ],
  [
    {
      "v1": [
        4,
        "Hc2DO@000048DKS9",
        4189032886,
      ],
      "v2": [
        5,
        "Hc2DO@000058DKS9",
        3265694938,
      ],
    },
    "",
    3492436178,
  ],
]
`;

exports[`getMergeableContent Set together 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
              "c2": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            1851134271,
          ],
          "r2": [
            {
              "c1": [
                2,
                "Hc2DO@000028DKS9",
                1691812082,
              ],
            },
            "",
            1951063224,
          ],
        },
        "",
        688021747,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Hc2DO@000038DKS9",
                4033202406,
              ],
            },
            "",
            645465578,
          ],
        },
        "",
        2126674952,
      ],
    },
    "",
    3758433300,
  ],
  [
    {
      "v1": [
        4,
        "Hc2DO@000048DKS9",
        4189032886,
      ],
      "v2": [
        5,
        "Hc2DO@000058DKS9",
        3265694938,
      ],
    },
    "",
    3492436178,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 1`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Hc2DO@000008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 2`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
            },
            "",
            1095422483,
          ],
        },
        "",
        221351349,
      ],
    },
    "",
    1403776291,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 4`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
            },
            "",
            1095422483,
          ],
        },
        "",
        221351349,
      ],
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            3742876152,
          ],
        },
        "",
        2422641961,
      ],
    },
    "",
    2794407532,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 5`] = `
[
  [
    {},
  ],
  [
    {
      "v0": [
        0,
        "Hc2DO@000028DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 6`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
            },
            "",
            1095422483,
          ],
        },
        "",
        221351349,
      ],
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            3742876152,
          ],
        },
        "",
        2422641961,
      ],
    },
    "",
    2794407532,
  ],
  [
    {
      "v0": [
        0,
        "Hc2DO@000028DKS9",
        2053295812,
      ],
    },
    "",
    1882187759,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 7`] = `
[
  [
    {},
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000038DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 8`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Hc2DO@000008DKS9",
                2614692414,
              ],
            },
            "",
            1095422483,
          ],
        },
        "",
        221351349,
      ],
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            3742876152,
          ],
        },
        "",
        2422641961,
      ],
    },
    "",
    2794407532,
  ],
  [
    {
      "v0": [
        0,
        "Hc2DO@000028DKS9",
        2053295812,
      ],
      "v1": [
        1,
        "Hc2DO@000038DKS9",
        952828352,
      ],
    },
    "",
    1960573623,
  ],
]
`;

exports[`getTransactionMergeableChanges After net noop transaction 1`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges During and after transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges During and after transaction 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 2`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside noop transaction 1`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Outside transaction 1`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;
